--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         <input class="wit" type="email" placeholder="E-mail Address"><br>
                         <input type="text" placeholder="Name">
                         <input type="number" placeholder="Your Phone"><br>
-                        <textarea placeholder="Messege"></textarea><br>
+                        <textarea placeholder="Messege"></textarea><br> <br>
                         <button value="submit"><h4>Subscribe</h4></button>
                     </form>
                 </div>
